<resources>
    <string name="app_name">StartScreen</string>
    <string name="instagram_Clone">Instagram Clone</string>
    <string name="email">Email</string>
    <string name="not_yet_a_member">Not yet a member?</string>
    <string name="instagram_clone">Instagram Clone</string>
    <string name="username">username</string>
    <string name="already_a_member">Already a member</string>
    <string name="register">Register</string>
    <string name="title_activity_my_home">MyHomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
