<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".RegisterActivity">



<de.hdodenhof.circleimageview.CircleImageView
    android:id="@+id/image_reg"
    android:layout_width="126dp"
    android:layout_height="126dp"
    android:layout_marginTop="20dp"
    android:src="@drawable/button"
    android:layout_gravity="center"
    android:layout_marginBottom="16dp"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instagram_clone"
        android:textAlignment="center"
        android:textSize="36dp"/>


    <EditText
        android:id="@+id/reg_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="30dp"
        />





    <EditText
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:layout_marginTop="20dp"

        />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"/>


    <Button
        android:id="@+id/btnReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/register"
        android:textAllCaps="false"
        />
    <TextView
        android:id="@+id/txt_already_a_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textSize="22sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/already_a_member"/>


</LinearLayout>