<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">





    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instagram_clone"
        android:textAlignment="center"
        android:textSize="32dp"/>


    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:layout_marginTop="20dp"

        />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"/>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="login"
        android:textAllCaps="false"
        />
<TextView
    android:id="@+id/txt_not_a_member"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:layout_marginTop="30dp"
    android:textSize="22sp"
    android:textColor="@color/colorPrimary"
    android:text="@string/not_yet_a_member"/>


</LinearLayout>